# krowka_simulation

./: install_deps.sh
krowka_model/: CMakeLists.txt  README.md  package.xml
krowka_model/launch/: krowka_controllers.launch  krowka_gazebo.launch  krowka_inverse_kinematics.launch  krowka_rviz.launch  krowka_teleop.launch  stone.launch
krowka_model/scripts/: pub_grip_close.sh  pub_grip_open.sh  pub_grip_zero.sh  pub_ik_axyz.sh  run_trajectory.sh
krowka_model/src/krowka_inverse_kinematics/: InverseKinematics.hpp  Main.cpp  MatlabVariable.hpp  TemplateSubscriber.hpp
krowka_model/src/krowka_slider_controller/: DRC_Krowka.cfg  Main.cpp  Publisher.hpp  Publisher2.hpp  Subscriber_DRC.hpp
krowka_model/urdf/krowka_simple/: README.txt  krowka.dae  krowka.urdf  krowka.xacro
krowka_model/urdf/krowka_simple/0_utils/: gazebo_ros_control.xacro
krowka_model/urdf/krowka_simple/1_base/: base_link.xacro
krowka_model/urdf/krowka_simple/2_links/: link_0.xacro  link_1.xacro  link_2.xacro  link_3.xacro
krowka_model/urdf/krowka_simple/3_gripper/: grip.xacro
krowka_model/urdf/krowka_simple/4_sensors/: camera.xacro
krowka_model/urdf/krowka_simple/yaml/: config.yaml
krowka_model/urdf/stone/: README.txt
krowka_model/urdf/stone/1_model/: stone0.xacro
